# Projectharan

./: .dockerignore  .env.example  .gitignore  AUDIT_LEDGER.md  BUILDLOG.md  BUILD_LOG_catalog.md  CATALOG_RECONCILE.md  CHECKER_INDEX.md  CHECK_CORPUS.md  CODE_UPGRADE_REPORT.md  COMPLETION_PROGRESS.md  CONTINUUM_PROGRESS.md  CORPUS_MEASURE.md  DEPLOY_NOTES.md  Dockerfile  ENGINE_INVENTORY.md  ENGINE_STATE.md  EXACT_SHARE_REPORT.md  HANDOFF.md  HARAN.md  IMPL_FULL_INDEX.md  IMPL_FULL_MEASURE.md  IMPL_INDEX.md  IMPL_MEASURE.md  INDEX_REPORT.md  LANG_INDEX.md  MATH_ASCENT_PROGRESS.md  MATH_ASCENT_REPORT.md  MATH_SHOWCASE.md  MEGA_CITATIONS.md  MEGA_PROGRESS.md  METAUPGRADE_INDEX.md  METAUPGRADE_MEASURE.md  NATIVE_CORE_REPORT.md  NEWENGINE3_INDEX.md  NEWENGINE3_MEASURE.md  NEWENGINE5_INDEX.md  NEWENGINE5_MEASURE.md  NEWENGINE_INDEX.md  NEWENGINE_MEASURE.md  (+253 more)
accel/: __init__.py  acceleration_report.py  causal_poset.py  io_pattern_fold.py  limit_pass.py  maximal.py  maximal_batch.py  pipeline.py  proven_dedup.py  proven_invalidation.py  proven_io_report.py  proven_speculation.py  semantic_cache.py  stress_550.py  verified_algo.py  verified_io.py  verified_parallel.py  verified_serde.py
agenttools/: __init__.py  capability.py  catalog_accel.py  catalog_context.py  catalog_debug.py  catalog_explore.py  catalog_fold.py  catalog_plain.py  envelope.py  executor.py  registry.py  router.py  toolcall.py
altlens/: __init__.py  (+4 more)
rust_accel/: Cargo.toml
rust_accel/src/: lib.rs
rust_core/: Cargo.toml
rust_core/src/: lib.rs
rust_graph/: Cargo.toml
rust_graph/src/: lib.rs
(+554 files in other folders)
